<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Football Scores</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="test_text" translatable="false">Test</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="champions_league" translatable="false">UEFA Champions League</string>
    <string name="bundesliga" translatable="false">Bundesliga</string>
    <string name="premierleague" translatable="false">Premier League</string>
    <string name="primeradivison" translatable="false">Primera Division</string>
    <string name="seriaa" translatable="false">Serie A</string>
    <string name="matchday_text">Match day</string>
    <string name="group_stage_text">Group stages</string>
    <string name="first_knockout_round">First knockout round</string>
    <string name="quarter_final">Quarter Final</string>
    <string name="semi_final">Semi Final</string>
    <string name="final_text">Final</string>
    <string name="share_text">Share</string>
    <string name="about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_text">
        This Application get Football Matches Score for the Premier League,Seria A,Bundesliga,Primera Division
        and the Uefa Champions League.
        All Matches data are acquired from football-data.org free API.
        All team Logos are acquired from http://hdlogo.wordpress.com/ upon requesting permission form the owner.
        The original version of this app was created by Yahia Khalid Ibn El Walid Ahmed, and a modified version is given to students in the Udacity Android Nanodegree program.
        To report any bugs,or suggestions do not hesitate to send a mail to y.k.ibnelwalid@gmail.com.

        During the off season, fake data will be added to the app.
    </string>
    <string name="widget_text">This is a widget probably.</string>
    <string name="api_key" translatable="false"></string>
    <string name="dummy_data" translatable="false">{\"timeFrameStart\":\"2015-06-18\",\"timeFrameEnd\":\"2015-06-19\",\"count\":1,\"fixtures\":[{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}}]}</string>

    <!-- Content Descriptions -->
    <string name="content_desc_league_name">"League name"</string>
    <string name="content_desc_match_day">"Match day"</string>
    <string name="content_desc_share_match">"Click to share match"</string>
    <string name="content_desc_home_team_crest">"Home team crest"</string>
    <string name="content_desc_home_team_name">"Home team name"</string>
    <string name="content_desc_match_score">"Match score"</string>
    <string name="content_desc_match_time">"Match time"</string>
    <string name="content_desc_away_team_crest">"Away team crest"</string>
    <string name="content_desc_away_team_name">"Away team name"</string>

    <string name="appwidget_text">EXAMPLE</string>

    <!-- Widget texts -->
    <string name="no_matches_for_today">No matches for today.</string>


    <string name="league_serie_a_name" translatable="false">"Serie A"</string>
    <string name="league_premier_name" translatable="false">"Premier League"</string>
    <string name="league_uefa_champions_name" translatable="false">"UEFA Champions League"</string>
    <string name="league_primera_division_name" translatable="false">"Primera Division"</string>
    <string name="league_bundesliga_name" translatable="false">"Bundesliga"</string>

    <string name="league_name_not_known_msg">"Not known league. Please report."</string>

    <string name="match_day_group_stages_msg">"Group Stages, Matchday : 6"</string>
    <string name="match_day_first_knockout_msg">"First Knockout round"</string>
    <string name="match_day_quarterfinal_msg">"QuarterFinal"</string>
    <string name="match_day_semifinal_msg">"SemiFinal"</string>
    <string name="match_day_final_msg">"Final"</string>
    <string name="match_day_msg">"Matchday : "</string>

    <string name="scores_separator" translatable="false">" - "</string>

    <string name="team_arsenal_london_fc_name" translatable="false">"Arsenal London FC"</string>
    <string name="team_manchester_united_fc_name" translatable="false">"Manchester United FC"</string>
    <string name="team_swansea_city_name" translatable="false">"Swansea City"</string>
    <string name="team_leicester_city_name" translatable="false">"Leicester City"</string>
    <string name="team_everton_fc_name" translatable="false">"Everton FC"</string>
    <string name="team_west_ham_united_fc_name" translatable="false">"West Ham United FC"</string>
    <string name="team_tottenham_hotspur_fc_name" translatable="false">"Tottenham Hotspur FC"</string>
    <string name="team_west_bromwich_albion_name" translatable="false">"West Bromwich Albion"</string>
    <string name="team_sunderland_afc_name" translatable="false">"Sunderland AFC"</string>
    <string name="team_stoke_city_fc_name" translatable="false">"Stoke City FC"</string>

    <string name="date_pattern" translatable="false">"yyyy-MM-dd"</string>

</resources>
